# crustacean

./: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  index.html  input.css
.github/workflows/: deploy.yml
research/: crate_versions.txt  leptos_trunk_research.md  search_queries.txt
rust-trait-mastery/: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
skills/software-development/: rust-curriculum.md  rust-tuts.md
src/: lib.rs  main.rs
src/components/: app.rs  catalog.rs  command_palette.rs  completion_screen.rs  content.rs  course_detail.rs  editor.rs  footer.rs  header.rs  keyboard_shortcuts.rs  mod.rs  terminal.rs
src/data/: courses.rs  curriculum_design_patterns.rs  curriculum_ownership_advanced.rs  curriculum_trait_mastery.rs  focus_associated_types.rs  focus_atomics.rs  focus_blanket_impls.rs  focus_builder.rs  focus_cow.rs  focus_default.rs  focus_deref.rs  focus_derive_macros.rs  focus_display_debug.rs  focus_drop.rs  focus_fn_traits.rs  focus_from_into.rs  focus_futures.rs  focus_gats.rs  focus_hrtb.rs  focus_impl_trait.rs  focus_into_iterator.rs  focus_lifetime_elision.rs  focus_macro_rules.rs  focus_maybe_uninit.rs  focus_never_type.rs  focus_newtype.rs  focus_object_safety.rs  focus_operator_overloading.rs  focus_orphan_rule.rs  focus_phantom_types.rs  focus_pin_unpin.rs  focus_safe_unsafe.rs  focus_sealed_traits.rs  focus_select.rs  focus_state_machine.rs  focus_static_lifetime.rs  focus_supertraits.rs  focus_thiserror.rs  focus_trait_objects.rs  focus_transmute.rs  (+25 more)
(+4 files in other folders)
