[package]
name = "tuts"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.18"
pulldown-cmark = { version = "0.13", features = ["html"] }
regex = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3.95", features = ["Window", "Storage", "console", "Document", "Element", "HtmlElement", "HtmlTextAreaElement", "KeyboardEvent", "ScrollIntoViewOptions", "ScrollLogicalPosition"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
